syntax = "proto3";
import "revision.proto";

message ClientRevisionWSData {
    string object_id = 1;
    ClientRevisionWSDataType ty = 2;
    RepeatedRevision revisions = 3;
    string data_id = 4;
}
message ServerRevisionWSData {
    string object_id = 1;
    ServerRevisionWSDataType ty = 2;
    bytes data = 3;
}
message NewDocumentUser {
    string user_id = 1;
    string doc_id = 2;
    bytes revision_data = 3;
}
enum ClientRevisionWSDataType {
    ClientPushRev = 0;
    ClientPing = 1;
}
enum ServerRevisionWSDataType {
    ServerAck = 0;
    ServerPushRev = 1;
    ServerPullRev = 2;
    UserConnect = 3;
}
